# BrandonCFBRatings

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_robustness.py
apps/: cli.py  streamlit_app.py
cfbratings/: analytics.py  config.py  io.py  snapshot_season.py
cfbratings/models/: colley.py  elo.py  hybrid.py  massey.py
cfbratings/viz/: charts.py
